--- a/shop.html
+++ b/shop.html
@@ -235,47 +235,55 @@
 
    
 
-      <!-- footer -->
-      <footer class="py-2">
-        <div class="container grid grid-4">
-          <div class="footer-logo p-2">
-            <img src="images/zesprex logo.png">
-          </div>
-          <div class="quick-links footer-col m-2">
-            <h4 class="lead py-1">Quick Links</h4>
-            <nav>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-              <li><a href="shop.html">Shop</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="about.html">About Us</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="product-link m-2 footer-col">
-            <h4 class="lead py-1">Product</h4>
-            <nav>
-              <ul>
-                <li><a href="">Cosmetics</a></li>
-                <li><a href="">For Men</a></li>
-                <li><a href="">For Women</a></li>
-                <li><a href="">For kids</a></li>
-                <li><a href="">Chocolate</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="app m-2 footer-col">
-            <h4 class="lead py-1">Download App</h4>
-            <img src="images/android.png" alt="">
-            <img src="images/apple.png" alt="">
-          </div>
-          <div class="footer-bottom p-2">
-            <p class="text-center">Copyright © 2021 Zesprex</p>
-          </div>
+     <!-- footer -->
+     <footer class="py-2">
+      <div class="container grid grid-4">
+        <div class="footer-logo p-2">
+          <img src="images/zesprex logo.png">
         </div>
-      </footer>
-    </body>
+        <div class="quick-links footer-col m-2">
+          <h4 class="lead py-1">Quick Links</h4>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About Us</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="product-link m-2 footer-col">
+          <h4 class="lead py-1">Product</h4>
+          <nav>
+            <ul>
+              <li><a href="">Cosmetics</a></li>
+              <li><a href="">For Men</a></li>
+              <li><a href="">For Women</a></li>
+              <li><a href="">For kids</a></li>
+              <li><a href="">Chocolate</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="app m-2 footer-col">
+          <h4 class="lead py-1">Download App</h4>
+          <img src="images/android.png" alt="">
+          <img src="images/apple.png" alt="">
+        </div>
+        <div class="footer-bottom p-2">
+          <p class="text-center">Copywrite <span class="year"></span>. All rights reserved. || Developed by <a href="https://github.com/farhan066"><strong>Farhan</strong></a></p>
+        </div>
+      </div>
+    </footer>
+
+
+    <!-- -----js------ -->
+    <script>
+      const year = document.querySelector(".year")
+
+      year.innerHTML = new Date().getFullYear()
+    </script>
+  </body>
 </html>
 
 
